--- a/src/components/ThirdHorizonMap/ThirdHorizonMap.scss
+++ b/src/components/ThirdHorizonMap/ThirdHorizonMap.scss
@@ -1,1 +1,6 @@
-#mapid { height: 1000px; display: grid;}
+#mapid { 
+	position: relative;
+	height: 500px; 
+	display: grid;
+	margin-bottom: 10px;
+}
