--- a/src/components/IconsCarousel/IconsCarousel.scss
+++ b/src/components/IconsCarousel/IconsCarousel.scss
@@ -1,87 +1,148 @@
-#carousel {
-  //position: relative;
-  //height: 100%;
-  top: 50%;
-  transform: translateY(-50%);
-  //overflow: hidden;
 
-  div {
-		position: absolute;
-		transition: transform 1s, left 1s, opacity 1s, z-index 0s;
-		opacity: 1;
-
-		img {
-			height: auto;
-			width: 100%; //400px;
-			transition: width 1s;
-		}
-
-		&.hideLeft {	 		
-			left: 0%;
-			opacity: 0;
-			transform: translateY(50%) translateX(-50%);
+  
+  .visuallyhidden {
+	position: absolute;
+	z-index: -1;
+	right: 0;
+	opacity: 0;
 	
-			img {
-				width: 50%//200px;
-			}
-		}
-
-		&.hide {
-			left: 50%;
-			opacity: 0;
-			transform: translateY(50%) translateX(-50%);
-			img {
-				width: 50%//200px
-			}
-		}
-
-		&.prev {
-			z-index: 5;
-			left: 30%;
-			transform: translateY(50px) translateX(-50%);
-			img {
-				filter:blur(2px);
-				width: 65%//300px
-			}
-		}
-
-		&.prevLeftSecond {
-			z-index: 4;
-			left: 15%;
-			transform: translateY(50%) translateX(-50%);
-			opacity: .7;
-	
-			img {
-				filter:blur(4px);
-				width: 50%//200px;
-			}
-		}
-
-		&.selected {
-			z-index: 10;
-			left: 50%;
-			transform: translateY(0px) translateX(-50%);
-		}
-
-		&.next {
-			z-index: 5;
-			left: 70%;
-			transform: translateY(35px) translateX(-50%);//translateY(50px) translateX(-50%);
-			img {
-				filter:blur(2px);
-				width: 140%;//300px;
-			}
-		}
-
-		&.nextRightSecond {
-			z-index: 4;
-			left: 85%;
-			transform: translateY(50%) translateX(-50%);
-			opacity: .7;
-			img {
-				filter:blur(4px);
-				width: 50%;//200px
-			}
-		}
+  }
+  
+  .container {
+	overflow: hidden;
+	padding: 20px;
+	margin-top: 2em;
+  }
+  
+  .card-carousel {
+	--card-width: 80%;
+	--card-max-width: 280px;
+	--card-height: 350px;
+	--carousel-min-width: 600px;
+	z-index: 1;
+	position: relative;
+	margin: 0 auto;
+	width: 100%;
+	height: var(--card-height);
+	min-width: var(--carousel-min-width);
+	transition: filter .3s ease;
+  }
+  
+  @media screen and (max-width: 640px) {
+	.card-carousel {
+	  margin-left: calc((100vw - var(--carousel-min-width) - 40px) / 2)
 	}
+  }
+  
+  .card-carousel.smooth-return {
+	transition: all .2s ease;
+  }
+  
+  .card-carousel .card {
+	background: #282614;
+	width: var(--card-width);
+	max-width: var(--card-max-width);
+	text-align: center;
+	padding: .5em;
+	min-width: 250px;
+	height: var(--card-height);
+	position: absolute;
+	margin: 0 auto;
+	color: rgba(0,0,0,.5);
+	transition: inherit;
+	-webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.3);
+	-moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.3);
+	box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.3);
+	border-radius: 1em;
+	filter: brightness(.9);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+  }
+  
+  .card.highlight {
+	filter: brightness(1);
+	box-shadow: rgb(94 90 54 / 82%) 0px 0px 30px;
+  }
+  
+  
+  .card:nth-of-type(1) .image-container {
+	  background-image: url("https://static.addtoany.com/images/dracaena-cinnabari.jpg");
+  }
+   
+  .card:nth-of-type(2) .image-container {
+	background-image: url("https://www.w3schools.com/w3css/img_lights.jpg")
+  }
+  
+  .card:nth-of-type(3) .image-container {
+	background-image: url("https://images.pexels.com/photos/414612/pexels-photo-414612.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500")
+  }
+  .card:nth-of-type(4) .image-container {
+	background-image: url("https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500")
+  }
+  .card:nth-of-type(5) .image-container {
+	background-image: url("https://helpx.adobe.com/content/dam/help/en/stock/how-to/visual-reverse-image-search/jcr_content/main-pars/image/visual-reverse-image-search-v2_intro.jpg")
+  }
+  .card:nth-of-type(6) .image-container {
+	background-image: url("https://helpx.adobe.com/content/dam/help/en/stock/how-to/visual-reverse-image-search/jcr_content/main-pars/image/visual-reverse-image-search-v2_intro.jpg")
+  }
+  .card:nth-of-type(7) .image-container {
+	background-image: url("https://helpx.adobe.com/content/dam/help/en/stock/how-to/visual-reverse-image-search/jcr_content/main-pars/image/visual-reverse-image-search-v2_intro.jpg")
+  }
+  .card:nth-of-type(8) .image-container {
+	background-image: url("https://helpx.adobe.com/content/dam/help/en/stock/how-to/visual-reverse-image-search/jcr_content/main-pars/image/visual-reverse-image-search-v2_intro.jpg")
+  }
+  .card:nth-of-type(9) .image-container {
+	background-image: url("https://helpx.adobe.com/content/dam/help/en/stock/how-to/visual-reverse-image-search/jcr_content/main-pars/image/visual-reverse-image-search-v2_intro.jpg")
+  }
+  
+  
+  
+  .image-container {
+	width: 8em;
+	height: 8em;
+	position: relative;
+	background-size: cover;
+	margin-bottom: 2em;
+	border-radius: 100%;
+	padding: 1em;
+	-webkit-box-shadow: inset 0px 0px 17px 0px rgba(0,0,0,0.3);
+  -moz-box-shadow: inset 0px 0px 17px 0px rgba(0,0,0,0.3);
+  box-shadow: inset 0px 0px 17px 0px rgba(0,0,0,0.3);
+	
+  }
+  
+  .image-container::after {
+	content: "";
+	display: block;
+	width: 120%;
+	height: 120%;
+	border: solid 3px rgba(0,0,0,.1);
+	border-radius: 100%;
+	position: absolute;
+	top: calc(-10% - 3px);
+	left: calc(-10% - 3px);
+  }
+  
+  h2 {
+	padding: 1em;
+	margin-top: 1em;
+	background: rgba(0,0,0,.3);
+	text-align: center;
+	color: white;
+	border-radius: .2em;
+	display: inline-block;
+	transform: translateX(calc((100vw - 100%) / 2))
+  }
+  
+  h2 a {
+	color: #f5b916
+  }
+
+  .blur-1 {
+	filter: blur(2px) brightness(.9) !important;
+  }
+  .blur-2 {
+	filter: blur(10px) brightness(.9) !important;
 }
