Home page welcome

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,11 @@ code {
     monospace;
 }
 
+// Welcome Font
+.welcome-font {
+	font-family: 'Merienda One', cursive !important;
+}
+
 // Background
 .stars, .twinkling, .clouds {
 	position:absolute;
