--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,7 @@ code {
 .stars,
 .twinkling,
 .clouds {
-	position: absolute;
+	position: fixed;
 	display: block;
 	top: 0;
 	bottom: 0;
@@ -28,6 +28,7 @@ code {
 	right: 0;
 	width: 100%;
 	height: 100%;
+	min-height: 100vh;
 }
 
 .stars {
